; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_vdev_removal.c_free_mapped_segment_cb.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_vdev_removal.c_free_mapped_segment_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*, i32, i32, i32, i32*)* }

@B_FALSE = common dso_local global i32 0, align 4
@vdev_indirect_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@metaslab_free_impl_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @free_mapped_segment_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_mapped_segment_cb(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to i32*
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @vdev_indirect_mark_obsolete(i32* %11, i32 %12, i32 %13)
  %15 = load i32, i32* @B_FALSE, align 4
  store i32 %15, i32* %8, align 4
  %16 = load i32 (i32*, i32, i32, i32, i32*)*, i32 (i32*, i32, i32, i32, i32*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vdev_indirect_ops, i32 0, i32 0), align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @metaslab_free_impl_cb, align 4
  %21 = call i32 %16(i32* %17, i32 %18, i32 %19, i32 %20, i32* %8)
  ret void
}

declare dso_local i32 @vdev_indirect_mark_obsolete(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
